# ExpenseTrackerApi

./: .env  README.md  docker-compose.yml  gunicorn_conf.py  main.py  pyproject.toml  pyrightconfig.json
alembic/: env.py
alembic/versions/: 312dca3547c5_add_currency_in_model_transaction.py  3f826e2d7e82_add_account_model_and_chores.py  44a1f76d2e4b_add_model_passwordresettoken.py  466f02b30a8a_added_model_category_transaction.py  55f3c18dc358_modified_models_user_transaction_and_.py  5745939758bc_add_refreshtoken_model.py  5c20109b9daf_add_user_model_base.py  62a5800cb117_add_timezone_utc_in_models_fields.py  6f0bbf00f500_add_relation_in_model_user_with_.py  8fccc71cd6f7_add_currency_field_in_transaction.py  fa8bc6b3df8c_add_relation_with_type_in_model_.py
src/: settings.py
src/api/: models.py  router.py
src/core/: db_connection.py
src/core/dependencies/: async_bd.py  auth_user.py
src/core/templates/: reset_password.html  welcome_email.html
src/core/utils/: auth.py  constants.py  db_connection.py  hashing.py  mailer.py  token.py  user_extra_info.py
src/domain/accounts/: __init__.py  api.py  models.py  repository.py  service.py
src/domain/accounts/types/: __init__.py  request.py  response.py
src/domain/auth/: __init__.py  api.py  models.py  repository.py  schemas.py  service.py
src/domain/auth/types/: __init__.py  request.py  response.py  schema.py
src/domain/categories/: __init__.py  api.py  models.py  repository.py  service.py
src/domain/categories/types/: __init__.py  request.py  response.py
src/domain/transactions/: __init__.py  api.py  models.py  repository.py  service.py
src/domain/transactions/types/: __init__.py  request.py  response.py  (+1 more)
src/domain/users/: api.py  models.py  repository.py  schemas.py  service.py
(+2 files in other folders)
