[project]
name = "expensetrackerapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "fastapi[standard]>=0.116.1",
    "gunicorn>=23.0.0",
    "pydantic-settings>=2.10.1",
    "sqlalchemy[asyncio]>=2.0.43",
]
